fix: resize against overflowing elements

--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -159,6 +159,11 @@ span {
     }
 }
 
+iframe {
+    box-sizing: border-box;
+    max-width: 100%;
+}
+
 @media (prefers-color-scheme: light) {
 
     h1,
